Corrected text alignment in text util attribute.

--- a/app/styles/cpn/_cpn-text.scss
+++ b/app/styles/cpn/_cpn-text.scss
@@ -8,11 +8,11 @@
 }
 
 [cpn-text~="left"] {
-    text-align: center;
+    text-align: left;
 }
 
 [cpn-text~="right"] {
-    text-align: center;
+    text-align: right;
 }
 
 // Decoration
